src/pages/homepage/homepage.styles.scss
.link {
  color: #57d6ff;
}

.homepage {
  display: flex;
  flex-direction: column;
  background: #141c24;
  color: white;
  min-height: 100vh;

  .banner-container {
    width: 100%;
    min-height: 100vh;
    padding: 50px;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;

    .banner {
      width: 100%;
      min-height: 100%;
      background-color: gray;
      display: flex;
      border-radius: 10px;
      justify-content: center;
      align-items: center;
      box-shadow: 0 0 30px #57d6ff;
      position: relative;
      border: 2px solid #57d6ff;
      background-image: url("https://a-static.besthdwallpaper.com/2022-korol-kratos-bog-voyny-ragnarok-komp-yuternaya-igra-oboi-2560x2048-75095_33.jpg");
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;

      .heading {
        position: absolute;
        top: 20px;
        font-size: 50px;
        transition: opacity 0.1s linear;

        &.deactive {
          opacity: 0;
        }
      }

      .banner-content {
        position: absolute;
        max-width: 70%;
        margin-top: 20px;
        text-align: center;

        .title {
          font-size: 50px;
          margin: 0;
        }
      }

      .line {
        position: absolute;
        right: 30px;
        width: 2px;
        top: 5%;
        background-color: white;
        animation: toBottom1 2s linear infinite;

        @keyframes toBottom1 {
          from {
            height: 0;
          }
          to {
            height: 90%;
          }
        }
      }

      .bottom-button-container {
        position: absolute;
        bottom: 10%;
      }

      .line-after-button {
        position: absolute;
        bottom: -10%;
        width: 1px;
        background-color: white;
        animation: toBottom2 4s linear infinite;

        @keyframes toBottom2 {
          from {
            height: 0;
          }
          to {
            height: 18%;
          }
        }
      }
    }
  }

  .content {
    margin-top: 20px;
    position: relative;
    margin-bottom: 20px;

    .subtitle {
      color: #57d6ff;
      display: flex;
      flex-direction: row;
      align-items: center;

      .subtitle-line {
        background-color: #57d6ff;
        width: 30px;
        height: 1px;
        margin-right: 20px;
      }
    }

    .title {
      font-size: 28px;
      margin-bottom: 40px;
    }

    .big-left-line {
      position: absolute;
      height: 100%;
      width: 1px;
      background-color: #343434;
      left: 10px;
    }

    .text {
      color: #ababab;
      font-family: "Roboto", sans-serif;
    }

    .how-does-it-works {
      display: flex;
      flex-direction: row;

      .col {
        padding: 30px;
        flex: 1;
        flex: 1;
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .img {
          max-width: 100%;
          width: 100%;
        }

        .bottom-link {
          position: absolute;
          bottom: 10px;
          left: 30px;
        }

        .line-between-p {
          width: 70%;
          height: 1px;
          background-color: gray;
        }
      }
    }

    @media (max-width: 800px) {
      .how-does-it-works {
        flex-direction: column-reverse;
      }
    }

    .fast-start {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-top: 70px;

      .steps {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        min-width: 80%;
        align-items: center;
        justify-content: center;

        .connection-line {
          min-width: 100px;
          height: 1px;
          background-color: #57d6ff;
          margin: 0 20px;
        }

        .step-group {
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          align-items: center;
          justify-content: center;
        }

        .step {
          display: flex;
          flex-direction: column;
          align-items: center;

          i {
            font-size: 50px;
            margin-bottom: 15px;
            color: #57d6ff;
          }
        }
      }

      .start-now-link {
        margin: 50px auto 0;
      }

      @media (max-width: 800px) {
        .steps {
          position: relative;
        }

        .step-group {
          min-width: 100%;
        }

        .connection-line.middle {
          position: absolute;
          transform: rotate(-30deg);
          width: 120px;
        }
      }
    }

    .available-options {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      margin-top: 70px;
    }

    .play-in-browser {
      display: flex;
      flex-direction: row;
      margin-top: 50px;
      padding-left: 30px;

      .col {
        flex: 1;
        display: flex;
        justify-content: center;
        flex-direction: column;

        img {
          max-width: 90%;
          width: 90%;
        }
      }

      @media (max-width: 800px) {
        & {
          flex-direction: column;
        }
      }
    }

    .servers-map {
      margin-top: 50px;
      display: flex;
      flex-direction: column;
      align-items: center;

      .map-container {
        position: relative;

        img {
          max-width: 100%;
        }

        .map {
          width: 100%;
        }

        .position {
          width: 30%;
          position: absolute;
          left: 25%;
          bottom: 8%;
        }
      }
    }
  }
}

